--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 .header {
   display: flex;
   align-items: flex-end;
+  margin-bottom: 240px;
   padding-top: 46px;
   padding-left: 10px;
 }
@@ -34,3 +35,40 @@
   font-weight: 500;
   color: #ffffff;
 }
+
+.slider__item {
+  margin-left: 10px;
+  color: #ffffff;
+}
+
+.slider__item-title {
+  margin-bottom: 10px;
+  font-size: 120px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.slider__item-text {
+  width: 674px;
+  margin-bottom: 46px;
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.slick-dots {
+  display: flex;
+  justify-content: flex-start;
+  column-gap: 20px;
+  margin-left: 10px;
+  font-size: 0;
+}
+
+.slick-dots button {
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 50%;
+}
+
+
